--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "yosay": "^2.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-preset-latest": "^6.24.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "chai": "^3.5.0",
     "dependency-check": "^2.8.0",
     "fs-extra": "^2.1.2",
